welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:9: error: ';' expected but 'else' found.
	} else {
          ^indexOfValue:14: error: Unmatched closing brace '}' ignored here
 }
 ^